Bug 334141 - Panel doesn't remember locked status
Summary: Panel doesn't remember locked status
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-30 15:18 UTC by Antonio Rojas
Modified: 2014-04-30 17:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2014-04-30 15:18:37 UTC
The panel doesn't remember its locked status across plasma-shell restarts. It always starts unlocked.

Reproducible: Always

Steps to Reproduce:
1.Lock the panel
2.Restart
3.Panel is unlocked
Comment 1 Marco Martin 2014-04-30 17:32:03 UTC
Git commit a6eca11b847bf263618669c5f52e89c027f3accf by Marco Martin.
Committed on 30/04/2014 at 17:30.
Pushed by mart into branch 'master'.

restore corona immutability

M  +3    -1    src/plasma/corona.cpp

http://commits.kde.org/plasma-framework/a6eca11b847bf263618669c5f52e89c027f3accf