restore corona immutability

BUG:334141